# poly-agent

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MARKET_AGENT_RESEARCH.md  README.md  RESEARCH.md
src/: broker.rs  dashboard.html  exchange.rs  forecast.rs  ledger.rs  llm.rs  main.rs  policy.rs  server.rs  triage.rs  types.rs
